# BlueScreenHelp

./: .gitignore  README.md  install.ps1  pyproject.toml  run.bat  run.ps1
agent/: __init__.py  __main__.py  ai_helper.py  cli.py  data_recovery.py  diagnostics.py  file_carving.py  reporter.py  troubleshooter.py
bluescreenhelp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: data-recovery-guide.md  diagnostic-tools.md  usb-boot-recovery.md  windows-activation.md  windows-media-creation.md
scripts/: Get-BSODInfo.ps1  Invoke-WindowsDiagnostic.ps1  Repair-Windows.ps1
tests/: __init__.py  test_cli.py  test_data_recovery.py  test_diagnostics.py  test_reporter.py  test_troubleshooter.py
